# ThinkingMinds

./: Android.qml  CMakeLists.txt  Cargo.toml  Dashboard.qml  Footer.qml  Main.qml  MyRage.qml  README.md  Testing.qml  WLExploit.qml  Wifi.qml  build.rs  main.cpp  minds.cpp  minds.h
app/: About.qml  Android.qml  Dashboard.qml  Footer.qml  Help.qml  IOT.qml  Main.qml  MyRage.qml  SideBar.qml  WLExploit.qml  Wifi.qml
src/: main.cpp  main.rs  minds.cpp  minds.h
src/dev/: minds.rs
ui/: app.slint  globals.slint  theme.slint
ui/components/: cardy.slint
ui/nav/: leftbar.slint  rightbar.slint  tabbar.slint  topheader.slint
ui/pages/: about_page.slint  account.slint  dashboard.slint  login.slint  page.slint  pages.slint  pentesting.slint  settings.slint  table.slint
ui/pages/find/: index.slint
ui/pages/pentesting/: globals.slint  index.slint  intro.slint  setup.slint
ui/pages/pentesting/dnsenum/: index.slint
ui/pages/pentesting/pscanner/: index.slint
ui/pages/pentesting/veela/: index.slint
ui/pages/pentesting/wifi/: index.slint
